// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-customerio-plugin', plugin: [Object] } 1`] = `
[
  "Successfully authenticated with Customer.io. Completing setupPlugin.",
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-hubspot-plugin', plugin: [Object] } 1`] = `
[
  "Created Hubspot Contact for test@hanzo.ai",
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-pace-insights-integration', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-avo-plugin', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-braze-app', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-engage-so-plugin', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-gcs-plugin', plugin: [Object] } 1`] = `
[
  "Plugin execution failed: Plugin plugin-insights-gcs-plugin setup failed: Cannot read properties of undefined (reading 'googleCloudKeyJson')",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-intercom-plugin', plugin: [Object] } 1`] = `
[
  "Contact test@hanzo.ai in Intercom not found",
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-laudspeaker-app', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-patterns-app', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-insights-plugin-replicator', plugin: [Object] } 1`] = `
[
  "Flushed 1 event to test",
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-pubsub-plugin', plugin: [Object] } 1`] = `
[
  "Plugin execution failed: Plugin plugin-pubsub-plugin setup failed: JSON config not provided!",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-rudderstack-insights-plugin', plugin: [Object] } 1`] = `
[
  "Function completed in REPLACED-TIME-ms.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-salesforce-plugin', plugin: [Object] } 1`] = `
[
  "Plugin execution failed: Plugin plugin-salesforce-plugin setup failed: host not a valid URL!",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the destination plugin: { name: 'plugin-sendgrid-plugin', plugin: [Object] } 1`] = `
[
  "Plugin execution failed: Plugin plugin-sendgrid-plugin setup failed: Custom field with name test is not defined in Sendgrid",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-Plugin-Stonly-Clean-Campaign-Name', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-currency-normalization-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-downsampling-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-drop-events-on-property-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-first-time-event-tracker', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-flatten-properties-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-language-url-splitter-app', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-ph-shotgun-processevent-app', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-plugin-advanced-geoip', plugin: [Object] } 1`] = `
[
  "Could not discard IP for event b3a1fe86-b10c-43cc-acaf-d208977608d0 as GeoIP has not been processed.",
  "Finished processing b3a1fe86-b10c-43cc-acaf-d208977608d0.",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-plugin-netdata-event-processing', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-plugin-stonly-UTM-Extractor', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-anonymization', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-app-unduplicator', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-filter-out-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-plugin-geoip', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-route-censor-plugin', plugin: [Object] } 1`] = `
[
  "Plugin set up with global config: , {
  "properties": [
    "$current_url",
    "$referrer",
    "$pathname",
    "$initial_current_url",
    "initial_pathname",
    "initial_referrer"
  ],
  "setProperties": [
    "$initial_current_url",
    "$initial_pathname",
    "$initial_referrer"
  ],
  "setOnceProperties": [
    "$initial_current_url",
    "$initial_pathname",
    "$initial_referrer"
  ]
}",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-insights-url-normalizer-plugin', plugin: [Object] } 1`] = `
[
  "event.$current_url: "https://hanzo.ai" normalized to "https://hanzo.ai/"",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-property-filter-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-semver-flattener-plugin', plugin: [Object] } 1`] = `
[
  "found candidate property: , test,  matches , ",
]
`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-taxonomy-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-timestamp-parser-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-url-parser-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: { name: 'plugin-user-agent-plugin', plugin: [Object] } 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: {\\n  name: 'plugin-insights-app-url-parameters-to-event-properties',\\n  plugin: [Object]\\n} 1`] = `[]`;

exports[`LegacyPluginExecutorService smoke tests should run the transformation plugin: {\\n  name: 'plugin-insights-plugin-snowplow-referer-parser',\\n  plugin: [Object]\\n} 1`] = `
[
  "(Event: $pageview) URL: https://hanzo.ai, Referrer: undefined, Referring domain: undefined",
  "(SNOWPLOW) Medium: unknown, Source: unknown, Term: undefined",
]
`;
